:space_invader: fixed focus on covers

--- a/packages/opds-web-client/src/stylesheets/book_cover.scss
+++ b/packages/opds-web-client/src/stylesheets/book_cover.scss
@@ -1,7 +1,6 @@
 .book-cover {
   width: 150px;
   height: 200px;
-  float: left;
   border: 1px solid #CCC;
 }
 
