--- a/packages/opds-web-client/src/stylesheets/lane_book.scss
+++ b/packages/opds-web-client/src/stylesheets/lane_book.scss
@@ -23,7 +23,7 @@
     transition: all 0.2s;
   }
 
-  &:hover .info {
+  a:focus .info, a:hover .info {
     height: calc(70%);
     background-color: rgba(255, 255, 255, 1);
     padding: $padding 0;
